--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
 	<meta charset="UTF-8">
 	<meta name="Keywords" content="이시우, Leesiwoo 포트폴리오,이시우 포트폴리오, portfolio, jungo's portfolio, 웹디자인, web design, 퍼블리셔, publisher"/>
 	<title>Jungo's Portfolio</title>
-	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+	<link href="//fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+	<link href="//fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+	<link href="//fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
-	<link href="https://fonts.googleapis.com/css?family=Quattrocento+Sans" rel="stylesheet">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">	
+	<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
+	<link href="//fonts.googleapis.com/css?family=Quattrocento+Sans" rel="stylesheet">
+	<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">	
 	<link rel="icon" href="images/favicon.ico" type="image/x-icon">
-	<link rel="stylesheet" href="/css/style.css" />
-	<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-	<script src="/js/jquery-1.7.1.min.js"></script>
-	<script src="/js/jquery.mousewheel.min.js"></script>
-	<script src="/js/script.js"></script>
+	<link rel="stylesheet" href="./css/style.css" />
+	<script src="//code.jquery.com/jquery-1.9.1.min.js"></script>
+	<script src="./js/jquery-1.7.1.min.js"></script>
+	<script src="./js/jquery.mousewheel.min.js"></script>
+	<script src="./js/script.js"></script>
 
 
 </head>
