뉴가 수정함

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 				<p><a href="#video"  class="video">VIDEO</a></p>
 				<p><a href="#epilogue"  class="epilogue">EVENT</a></p>
 			</div>
+			뉴원이 수정했습니다.
 		</div>
 	</div>
 	<div id="section">
