--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 				<p><a href="#video"  class="video">VIDEO</a></p>
 				<p><a href="#epilogue"  class="epilogue">EVENT</a></p>
 			</div>
+			여긴 뉴원 1 이 수정함
+			
 		</div>
 	</div>
 	<div id="section">
